Fixed URL's with long lines breaking the page alignment

--- a/src/styles/PostFeed.scss
+++ b/src/styles/PostFeed.scss
@@ -106,6 +106,8 @@
 
         a {
           position: relative;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
 
           &:before {
             content: '\02937';
